Version 7.2
~~~~~~~~~~~
Add transient XML type

Version 7.1
~~~~~~~~~~~
Do better job expanding "entities" in XML formation
 - do expansion more universally
 - encode ascii values 1-31 in [[]] so they can be idenfied and not crash parsers
Add new Mark5 States: Test TestWrite and TestRead
Improve safety of string manipulation
 - TODO: entity expansion safety

Version 0.7 20090904
~~~~~~~~~~~
Add XML type for condition reports
  one document per disk (i.e., 8 per module)
Test programs for condition document types
DiFX version 1.5.1
unchanged for DiFX-1.5.2

Version 0.6 20090518
~~~~~~~~~~~
Improvements to difxlog
DiFX version 1.5

Version 0.5 20090131
~~~~~~~~~~~
Complete change from DifxMessageError to DifxMessageAlert
Add Mark5Version message type
Add Daughterboard information to Mark5Version messages
Implement a minimum send delay (set to 40us now) to prevent loss of messages
  when many are sent at nearly the same time.  Warning -- this could have 
  performance impacts!

Version 0.4 20090121
~~~~~~~~~~~
Escape characters in xml messages: < > & ' "
  see http://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references
Add initial version of "mk5display", a python gui to watch a bank of Mark5 units. 
  This is basically a toy, not for real use at the moment.
Add difxStopMessage
Add difxlog

Version 0.3  20080715
~~~~~~~~~~~
New branch version post version 1.1
Add table (enum) of error levels
Rename ERROR to ALERT
Binary message sending, intended for Short Term Accumations (STAs)
Don't assume default PORT and GROUP
Add DifxMessageParameter type
  Note: mpiid is a target parameter for this message type, not a source parameter
Add DifxMessageStart 
Started distinguishing between STA and LTA types

Version 0.2  20080518
~~~~~~~~~~~
Add XML parsing routines
More structured document types
Add generic document union and associated processing
NRAO-DiFX version 1.1

Version 0.1  20080311
~~~~~~~~~~~
Initial version